<resources>
    <string name="app_name">Selling Price Calculator</string>
    <string name="cost_price">Cost Price</string>
    <string name="profit_margin">Profit Margin</string>
    <string name="sale_price">Sale Price</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="markup">Markup</string>
    <string name="profit">Profit</string>
    <string name="profit_margin_error">Profit Margin should be between 0 to 100%</string>
    <string name="add_cost">Add Cost</string>
    <string name="add">Add</string>
    <string name="cost_name">Cost Name</string>
    <string name="percentage_name">Percentage Name</string>
    <string name="percentage_cost">Percentage Cost</string>
    <string name="cost">Cost</string>
    <string name="percentage">Percentage</string>
    <string name="percentage_fee"><u>Percentage Fees</u></string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="percentage_format">%1$s%%</string>
    <string name="cost_content">Fixed costs such as item cost, postage and packing etc.</string>
    <string name="percentage_content">Percentage Fee taken from total sale price such as eBay/Amazon/PayPal fees. </string>
    <string name="add_cost_toast">Cost Added</string>
    <string name="add_percentage_toast">Percentage Added</string>
    <string name="cost_tab_title">Cost List</string>
    <string name="percentage_tab_title">Percentage Fee List</string>
    <string name="cost_total">Cost Total:</string>
    <string name="percentage_fee_total">Percentage Total:</string>
    <string name="load_template">Load Template</string>
    <string name="save_template">Save Template</string>
    <string name="save_dialog_message">Save the Cost List, Percentage List and the current calculations.</string>
    <string name="load_dialog_message">Load the Cost List, Percentage List and the current calculations. Select a Template</string>
    <string name="save">Save as New</string>
    <string name="template_name">Template Name</string>
    <string name="empty_error">Cannot be empty</string>
    <string name="cancel">Cancel</string>
    <string name="load">Load</string>
    <string name="settings">Settings</string>
    <string name="saved_toast">Saved</string>
    <string name="override_current">Override Current</string>
    <string name="calculation">Calculation</string>
    <string name="fixed_cost"><u>Fixed Costs</u></string>
    <string name="active_costs">Active Costs</string>
    <string name="inactive_costs">Inactive Costs</string>
    <string name="inactive_percentages">Inactive Percentages</string>
    <string name="active_percentages">Active Percentages</string>
    <string name="cost_value">Cost Value</string>
    <string name="cost_added">Cost Added!</string>
    <string name="add_percentage">Add Percentage</string>
    <string name="percentage_value">Percentage Value</string>
    <string name="empty_content_cost_list">Add fixed costs that will be used in all calculations when made active. \nAdd a cost below.</string>
    <string name="instructions_cost_list">Active Costs will be used in all calculations. \nClick to toggle active status, swipe to delete cost.</string>
    <string name="empty_content_percentage_list">Add percentage fees that will be used in all calculations when made active. \nAdd a percentage below.</string>
    <string name="instructions_percentage_list">Active Percentage will be used in all calculations. A percentage fee will be subtracted from the sale price. \nClick to toggle active status, swipe to delete cost.</string>
    <string name="additional_cost">Extra Cost</string>
    <string name="additional_percentage">Extra Percentage</string>
    <string name="current_template">Current Template:</string>
    <string name="n_a">N/A</string>
</resources>