<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_percentage"
        style="@style/DialogTitleText"/>

    <TextView
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/save_dialog_message"
        style="@style/CategoryContentText"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/percentageListAddPercentageDialogPercentageNameTi"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/percentage_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/percentageListAddPercentageDialogPercentageNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/percentageListAddPercentageDialogPercentageValueTi"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/percentage_value">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/percentageListAddPercentageDialogPercentageValueEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>