<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calculation"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/calculationCostTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CategoryTitleText"
        android:text="@string/cost"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/calculationCostLL"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationCostTitleTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/calculationCostNameTi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:hint="@string/cost_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calculationCostNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/calculationCostValueTi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:hint="@string/cost_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calculationCostValueEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calculationAddCostBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginStart="4dp"
            android:text="@string/add" />
    </LinearLayout>

    <TextView
        android:id="@+id/calculationPercentageTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CategoryTitleText"
        android:text="@string/percentage"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/calculationCostLL"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/calculationPercentageLL"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/calculationPercentageTitleTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/calculationPercentageNameTi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:hint="@string/percentage_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calculationPercentageNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/calculationPercentageValueTi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:hint="@string/percentage_cost">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calculationPercentageValueEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calculationAddPercentageBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginStart="4dp"
            android:text="@string/add" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/calculationTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/calculationPercentageLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/calculationPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculationTabLayout"
        app:layout_constraintBottom_toTopOf="@id/calculationMarkupTi"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calculationProfitMarginTi"
        style="@style/EditTextCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/profit_margin"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calculationProfitTi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calculationProfitMarginEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calculationSalePriceTi"
        style="@style/EditTextCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calculationProfitMarginTi"
        app:layout_constraintStart_toEndOf="@id/calculationMarkupTi"
        android:hint="@string/sale_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calculationSalePriceEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calculationMarkupTi"
        style="@style/EditTextCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calculationProfitTi"
        app:layout_constraintEnd_toStartOf="@id/calculationSalePriceTi"
        android:hint="@string/markup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calculationMarkupEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calculationProfitTi"
        style="@style/EditTextCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/calculationProfitMarginTi"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/profit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calculationProfitEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>